# iceberg-rest-catalog

./: .env  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  catalog.py  config.py  exception.py  main.py  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
api/: catalog_api.py
examples/mysql-minio/: docker-compose.yml
examples/postgres-minio/: docker-compose.yml
examples/sqlite/: docker-compose.yml
examples/sqlite-minio/: docker-compose.yml
models/: config.py  exception.py  request.py  response.py
src/iceberg_rest/: catalog.py  main.py  settings.py
src/iceberg_rest/api/: catalog_api.py
src/iceberg_rest/models/: request.py
tests/: conftest.py  pyspark_test.py  test_base.py
